<resources>
    <string name="app_name">API RecyclerView App</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="subtitle">Made by Francois van Kempen</string>
    <string name="title_login">Log-in</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="creditsPre">Credits: </string>
    <string name="recommended">Recommended for You</string>
    <string name="searchText">Search for meditation types…</string>
    <string name="welcome">Welcome to Calm</string>
    <string name="explore">Explore More Sessions</string>
    <string name="rejectMaterialism">Reject Materialism</string>
    <string name="guided">Guided Meditation</string>
    <string name="mindfulness">Mindfulness Practices</string>
    <string name="sleep">Wind down for a serene sleep</string>
    <string name="evening">Evening Relaxation</string>
    <string name="body">Stay in touch with your body</string>
    <string name="afternoon">Afternoon sessions</string>
    <string name="peaceful">Start your day peacefully</string>
    <string name="morning">Morning Meditation</string>
    <string name="attune">Attune your Body</string>
    <string name="profile">Profile</string>
    <string name="journey">Your Meditation Journey</string>
    <string name="streak">Current \nStreak:</string>
    <string name="sessions">Sessions Completed:</string>
    <string name="meditation">Meditation Time:</string>
    <string name="progress">Visualize your Progress:</string>
    <string name="rank">Meditation Enthusiast</string>
    <string name="username">Username</string>
    <string name="alertTitle">Are you sure?</string>
    <string name="signOutAlert">This will sign you out of your account.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="streakCount">7 Days</string>
    <string name="sessionCount">30 sessions</string>
    <string name="meditationTimeCount">5 hours</string>
    <string name="firstName">First Name</string>
    <string name="studentId">Student ID</string>
    <string name="invalidLogin">Invalid login details</string>
    <string name="credits">%1$s: %2$d</string>
    <string name="details">Details...</string>
    <string name="back">BACK</string>
    <string name="timeout">Please try again later</string>
    <string name="login_details_not_found">Login details not found</string>
    <string name="request_timed_out">Request timed out. \nPlease try again later...</string>
    <string name="invalid_login_details">Invalid login details</string>
    <string name="not_connected_to_network">Not connected to network</string>
    <string name="json_error">Server responded in unexpected JSON format</string>
    <string name="server_error">Server experienced internal error: Contact VU Administration for help.</string>
    <string name="noSupportMessage">The floating point integers returned by the API break my JSON adapter, and I cannot be asked to fix it for one edge case. Sorry Kayvan.</string>
    <string name="notSupported">Account Not Supported</string>
    <string name="okay">Okay</string>
</resources>