<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.s8126540francoisassessmenttwo.ui.detail.DetailFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="entity"
            app:argType="com.example.s8126540francoisassessmenttwo.data.Entity"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.s8126540francoisassessmenttwo.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/detailsScreen"
            app:destination="@id/navigation_detail"/>
        <action
            android:id="@+id/loggedOut"
            app:destination="@id/navigation_login"/>
        <argument
            android:name="keypass"
            app:argType="com.example.s8126540francoisassessmenttwo.data.Keypass" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.s8126540francoisassessmenttwo.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/loggedIn"
            app:destination="@id/navigation_dashboard"/>
    </fragment>
</navigation>