<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.login.LoginFragment">


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/firstNameWrapper"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/firstName"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/green"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:boxStrokeWidth="2.3dp"
        app:boxStrokeWidthFocused="2.3dp"
        app:helperText=""
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/studentIdWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText

            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentIdWrapper"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:hint="@string/studentId"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperText=""
        app:helperTextEnabled="true"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameWrapper">

        <EditText
            android:id="@+id/editTextStudentID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:inputType="text"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_rounded_corners"
        android:text="@string/title_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentIdWrapper" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="200dp"
        android:mirrorForRtl="false"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/buttonHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:text=""
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameWrapper"
        app:layout_constraintStart_toStartOf="@id/firstNameWrapper"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:textStyle="bold|normal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/firstNameWrapper"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="44dp" />
</androidx.constraintlayout.widget.ConstraintLayout>